# fastapi-benchmark-optimization

./: README.md  pyproject.toml
db/: employees.sql
load_tests/cpu_bound/: breakpoint_test.js  load_test.js  smoke_test.js  spike_test.js
load_tests/io_bound/: breadpoint_test.js  load_test.js  smoke_test.js  spike_test.js
load_tests/io_cpu_bound/: breakpoint_test.js  load_test.js  smoke_test.js  spike_test.js
scripts/: test_servers.sh
servers/: async_server.py  sync_server.py
